--- a/assets/package.json
+++ b/assets/package.json
@@ -7,12 +7,8 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "*",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-jshint": "*",
     "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-htmlhint": "*"
+    "grunt-contrib-watch": "*"
   }
 }
