--- a/assets/package.json
+++ b/assets/package.json
@@ -6,9 +6,11 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "*",
+    "grunt-contrib-compass": "^1.0.4",
     "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*"
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^1.1.1",
+    "load-grunt-tasks": "^3.3.0"
   }
 }
