--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.4",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
